# cloudlink-core

./: .gitignore  README.md  cloudlink.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cloudlink_core/: __init__.py
cloudlink_core/state/: crypto.py  postgres_analytics.py  postgres_credentials.py  postgres_governance.py  postgres_identity.py  postgres_integrations.py  postgres_operations.py  postgres_product_analytics.py  postgres_runs.py  postgres_subscriptions.py  sqlite_store.py
examples/v1/: action_plan.invalid.json  action_plan.valid.json  cost_event.invalid.json  cost_event.valid.json  execution_result.invalid.json  execution_result.valid.json  execution_results.jsonl  resource_state_event.invalid.json  resource_state_event.valid.json
schemas/v1/: action_plan.json  cost_event.json  execution_result.json  resource_state_event.json
scripts/: demo_state_from_events.py  demo_state_from_execution_results.py  validate_examples.py
state/: sqlite_store.py  store.py
tests/: conftest.py  test_multi_tenant.py  test_sqlite_store.py
validators/: validate.py
